CSS adjustment, line endings fix: adjusted title card display so that background is blurred while card is displayed on mobile devices; this is for a better mobile experience. Updated 'Download Resume' button so that resume opens in new tab. Added .gitattributes file with 'text=auto' so that line endings adjustments are platform-specific (I've transitioned to a linux development environment)

--- a/src/components/TitleCard/titlecard.css
+++ b/src/components/TitleCard/titlecard.css
@@ -1,28 +1,29 @@
-.contact-button {
-  background-color: green;
-  color: white;
-  border-radius: 5%;
-  padding: 2%;
-  max-width: 75%;
-  border: none;
-  border-spacing: 10px;
-  margin: 0px 5px 5px;
-}
-
-.contact-button:active {
-  background-color: lightgreen;
-}
 
 .toggle-collapse-button {
+  position: inherit;
   margin-top: 5rem;
   width: 2%;
   height: 10vh;
   z-index: 999;
 }
 
+.title-card-page-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 0;
+  backdrop-filter: blur(3px);
+  display: none;
+}
+
 .title-card-container {
+  position: relative;
   margin: 5%;
   display: block;
+  z-index: 999;
 }
 
 .title-card {
@@ -39,27 +40,45 @@
   margin-top: 1rem;
   margin-left: 3%;
   opacity: 85%;
-  backdrop-filter: blur(10px);
-  z-index: 10;
+  z-index: 999;
   display: block;
 }
 
-@media screen and (max-width: 640px) {
-  .title-card {
-    margin-top: 0rem;
-    width: 70vw !important;
-    max-width: 320px;
-    height: auto;
-    position: relative;
-  }
-
-  .title-card-container {
-    display: flex;
-    width: 600px;
-  }
-
-  .title-card-body {
-    width: auto;
-    max-width: 85%;
-  }
+.contact-button {
+  background-color: green;
+  color: white;
+  border-radius: 5%;
+  padding: 2%;
+  max-width: 75%;
+  border: none;
+  border-spacing: 10px;
+  margin: 0px 5px 5px;
 }
+
+.contact-button:active {
+  background-color: lightgreen;
+}
+
+@media screen and (max-width: 640px) {
+    .title-card {
+      margin-top: 0rem;
+      width: 70vw !important;
+      max-width: 320px;
+      height: auto;
+      position: relative;
+    }
+    
+    .title-card-container {
+      display: flex;
+      width: 600px;
+    }
+
+    .title-card-body {
+      width: auto;
+      max-width: 85%;
+    }
+
+    .title-card-page-overlay {
+      display: block;
+    }
+  }
